Add 강좌1(Angular 개발 환경 설정)

--- a/StudyProject/Front/angular.json
+++ b/StudyProject/Front/angular.json
@@ -123,6 +123,9 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-quick-start"
+    }
+  },
+  "cli": {
+    "analytics": "3b3963bc-6bdb-4816-b3c2-83daf6a711a5"
+  }
 }
